compiler/tests/fixtures/invalid/semantics/reaction_precasts_undefined_role.viv
// Invalid: reaction precasts role not in target

reserved action respond:
    roles:
        @responder:
            as: initiator

action trigger:
    roles:
        @actor:
            as: initiator
    reactions:
        queue action respond:
            with:
                @responder: @actor
                @phantom: @actor
